# Inverse_IsaacLab

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/inverse/: custom_manager_based_rl_env.py  custom_record_demos.py  custom_replay_demos.py  demo.py  train_disassembly.py  train_task1.py
scripts/inverse/assembly_by_inverse/: PhaseEvaluator.py  demo.py  pretrain_policy.py  sweep.yaml  train_inverse_skill.py  train_inverse_skill_launcher.py
scripts/inverse/assembly_by_inverse/helpers/: clean_isaaclab_demos.py  hdf5_functions.py  load_demos.py  phase_evaluator_plots.py  pretrained_policy_plots.py
scripts/inverse/assets/: experiment_1_environment.usd  physics_settings_trys.usd  robot.usd  task1_fixed.usd  task1_moved.usd  task2_fixed.usd  task2_moved.usd  ur5e_rl_libre.usd  ur5e_with_gripper.usd
scripts/inverse/datasets/: dataset.hdf5  disassembly_15.hdf5  disassembly_fixed_starts_15.hdf5  disassembly_fixed_starts_validation_5.hdf5  disassembly_validation_5.hdf5  only_pullout_15.hdf5  only_pullout_validation_5.hdf5  without_obj_rot_observation_10.hdf5
scripts/inverse/disassembly/: NN.py  sweep.yaml  train_disassembly.py
scripts/rl_games/: play.py  train.py
scripts/rsl_rl/: play.py  train.py
scripts/sb3/: play.py  train.py
scripts/skrl/: play.py  train.py
source/: setup.py
source/InverseAssemblyProject/: __init__.py  ui_extension_example.py
source/InverseAssemblyProject/tasks/manager_based/assembled_start/: assembled_start_cfg.py  task1_env_cfg.py  (+1 more)
source/config/: extension.toml
(+17 files in other folders)
